Fix a few desktop issues und adjust spacing in header

--- a/stylesheets/_mixins.sass
+++ b/stylesheets/_mixins.sass
@@ -7,7 +7,7 @@ $break-desktop: 1024px
     @media only screen and (max-width: $break-small)
       @content
   @else if $media == tablet
-    @media only screen and (min-width: $break-small + 1) and (max-width: $break-desktop - 1)
+    @media only screen and (min-width: $break-small + 1)
       @content
   @else if $media == desktop
     @media only screen and (min-width: $break-desktop)
