--- a/stylesheets/application.sass
+++ b/stylesheets/application.sass
@@ -34,6 +34,8 @@ h1
   font-size: 8rem
   color: $grey-color
   letter-spacing: 3px
+  line-height: 1
+  margin-bottom: 0
 
 h2
   font-family: "Neutraface", sans-serif
@@ -71,6 +73,9 @@ dt
 dd
   margin: 0
 
+.wedding-date
+  margin-bottom: 5rem
+  font-size: 2.5rem
 
 .content
   margin: 0 auto
@@ -94,6 +99,7 @@ dd
 
 .welcome
   text-align: center
+  background: url('../images/kugeln-links.png') no-repeat
   +respond-to(mobile)
     background: url('../images/kugeln-mitte.png') no-repeat
   +respond-to(tablet)
